--- a/style.css
+++ b/style.css
@@ -11,9 +11,7 @@ img {
     user-select: none;
 }
 
-body {
-    scroll-behavior: smooth;
-}
+
 
 
 /*menubar*/
@@ -25,15 +23,8 @@ body {
     top: 0;
     width: 100%;
     height: 70px;
-    z-index: 1;
+    z-index: 2;
     
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
 }
 
 .menueach {
@@ -54,8 +45,8 @@ body {
 #line {
     position: absolute;
     display: inline;
-    border: solid #898989;
-    border-width: 3px 0 0 0;
+    border: solid #000;
+    border-width: 2px 0 0 0;
     margin-top: 9px;
     margin-left: 3px;
     padding: 15px;
@@ -95,12 +86,12 @@ body {
     margin-left: 0%;
     z-index: 0;
   
-    padding-left: 220px;
+    padding-left: 0%;
 }
 
 .course-pad { 
     
-    width: 58%;
+    width: 61%;
     height: 480px;
     
     background: repeating-linear-gradient(
@@ -138,90 +129,53 @@ body {
 
 #course-id {
     position: absolute;
-    top: 31px;
-    right: 230px;
-    
-    background-color: #F2F2F2;
-    padding: 5px 30px 2px 10px;
-    
-    text-transform: uppercase;
-    color: #333333;
-    
-    font-family: Nunito;
-    font-size: 13px; 
-    letter-spacing: 1.4px;
+    top: 40px;
+    right: 206px;
 }
-    #grade-box {
-        top: -30px;
-    
-        position: relative;
-        display: inline-block;
-        
-        margin-left: 10px;
-    }
-        #box {
-        position: absolute;    
-        z-index: 1;
-        top: 17px;
-        left: 8px;
-        
-        width: 13px;
-        height: 13px;
-    
-        border: 1px solid #333333;
-        opacity: 0.5;
-        }
 
-    #grade-course {
-        position: absolute;
-        top: 12px;
-        right: -30px;
+#course-id p {
+    font-size: 13px;
+}
     
-        width: 25px;
-        height: 20px;
-        
-        background-color: #C0ED56;
-        opacity: 0.0;
-    }
-
 .course-pad h1 {
     position: absolute; 
 
-    right: 150px;
-    top: 37px;
+    right: 66px;
+    top: 40px;
     
+    letter-spacing: 0.5px;
     font-family: Garamond; 
-    font-size: 35px;
+    font-size: 46px;
     font-weight: 600;
 }
 
 .course-pad h2 {
     position: absolute; 
 
-    top: 90px;
-    right: 230px;
+    top: 109px;
+    right: 216px;
     
     font-family: Garamond; 
-    font-size: 17px;
+    font-size: 18px;
     font-weight: 600;
     
-    color: #4d4d4d;
+    color: #0d0d0d;
 }
 
 
 .slash {
     position: absolute;
-    right: 450px;
-    top: 15px;
+    right: 452px;
+    top: 13px;
 }
 
 .slash h1 {
     position: absolute;
     top: 10px;
-    left: 16px;
+    left: 0px;
     
     border: solid #FFDC4A;
-    border-width: 0 0 70px 5px;
+    border-width: 0 0 108px 5px;
     transform: rotate(18deg);
     -webkit-transform: rotate(18deg);
 }
@@ -229,10 +183,10 @@ body {
 .slash h2 {
     position: absolute;
     top: 10px;
-    left: 34px;
+    left: 24px;
     
     border: solid #314289;
-    border-width: 0 0 70px 5px;
+    border-width: 0 0 108px 5px;
     transform: rotate(18deg);
     -webkit-transform: rotate(18deg);
 }
@@ -240,17 +194,17 @@ body {
 .slash h3 {
     position: absolute;
     top: 10px;
-    right: -380px;
+    right: -490px;
     
     border: solid #FFDC4A;
-    border-width: 0 0 70px 5px;
+    border-width: 0 0 108px 5px;
     transform: rotate(18deg);
     -webkit-transform: rotate(18deg);
 }
 
 .course-title {
     position: relative;
-    right: 20%;
+    right: 23%;
     
   -webkit-touch-callout: none; 
     -webkit-user-select: none; 
@@ -269,7 +223,7 @@ body {
     border-top: 2px solid #000;
     padding-top: 4px;
     
-    top: 218px;
+    top: 198px;
 }
 
 .go-to::after{
@@ -298,29 +252,29 @@ body {
     
     position: relative;
     display: inline-block;
-    margin-left: 52%;
-    z-index: 4;
+    margin-left: 58%;
+    z-index: 1;
 
 }
 
 #gap {
     position: relative;
-    height: 200px;
+    height: 185px;
 }
 
 
 /**/
 
 .ad {    
-    margin-top: 175px;
+    margin-top: 209px;
     position: absolute;
     width: 400px;
-    right: 23%;
+    right: 24%;
 }
 
 .ad-banner {
     
-    margin-bottom: 52px;
+    margin-bottom: 32px;
     width: 410px;
     height: 140px;
     
@@ -355,7 +309,7 @@ body {
     color: #333333;
     
     font-family: Quattrocento Sans;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 600;
     letter-spacing: 1.4px;
     line-height: 20px;
@@ -376,16 +330,37 @@ body {
 /**/
 
 #asm {
-    background-color: #F2F2F2;
-    padding: 7px 30px 4px 10px;
+    position: relative;
+}
+
+#id-and-grade {
+    position: relative;
     
+    display: inline;
     text-transform: uppercase;
     color: #333333;
     
     font-family: Nunito;
     font-size: 12px; 
     letter-spacing: 1.4px;
-}
+    
+    padding: 8px 40px 3px 10px;
+    background-color: #F2F2F2;
+    
+}  #box {
+        position: relative; 
+        display: inline-block;
+            
+        top: 1px;
+        right: 30px;
+        
+        width: 13px;
+        height: 13px;
+    
+        border: 1px solid #333333;
+        opacity: 0.5;
+        }
+
 
 #project-title {
     
@@ -396,8 +371,12 @@ body {
     
     color: #333333;
     font-family: Quattrocento;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 600;
+    letter-spacing: 0.4px;
+    line-height: 1.5;
+    
+    text-decoration: none;
     
     z-index: 2;
 }
@@ -407,14 +386,18 @@ body {
     z-index: 2;
 }
 
+.project a {
+    text-decoration: none;
+}
+
 .list {
-    z-index: 9;
+    z-index: 3;
 }
 
 /* i feel */
 .i-feel {
     position: relative;
-    right: 138px;
+    right: 88px;
     margin-top: 28px;
     margin-bottom: 80px;
     
