--- a/style.css
+++ b/style.css
@@ -97,9 +97,9 @@ img {
     background: repeating-linear-gradient(
         0deg,
         #f0f0f0,
-        rgba(0,0,0,0) 3px,
-        rgba(0,0,0,0) 12px,
-        rgba(0,0,0,0) 24px
+        rgba(0,0,0,0) 0.2em,
+        rgba(0,0,0,0) 0.4em,
+        rgba(0,0,0,0) 1.6em
     );
     
     border: 0px solid #cccccc;
@@ -371,9 +371,9 @@ img {
     
     color: #333333;
     font-family: Quattrocento;
-    font-size: 19px;
-    font-weight: 600;
-    letter-spacing: 0.4px;
+    font-size: 21px;
+    font-weight: 700;
+    letter-spacing: 0.3px;
     line-height: 1.5;
     
     text-decoration: none;
@@ -441,10 +441,19 @@ img {
 		z-index:2;
 		bottom:-2px;
 		left:-7px;
+    
+        width: 20px;
 		height:20px;
-		border-left:20px solid #E5E5EA;
-		border-bottom-right-radius: 16px 14px;
+    
+		background: rgba(229, 229, 234, 1);
+    
+		border-radius: 0 0 16px 0;
+        
+        transform:translate(0, -2px);
 		-webkit-transform:translate(0, -2px);
+        -ms-transform:translate(0, -2px);
+        -moz-transform:translate(0, -2px);
+        -o-transform:translate(0, -2px);
     
 }
 .they-read::after {
@@ -455,9 +464,16 @@ img {
 		left:4px;
 		width:26px;
 		height:20px;
-		background:white;
-		border-bottom-right-radius: 10px;
+		
+        background: #fff;
+    
+		border-radius: 0 0 10px 0;
+    
+        transform:translate(-30px, -2px);
 		-webkit-transform:translate(-30px, -2px);
+        -ms-transform:translate(-30px, -2px);
+        -moz-transform:translate(-30px, -2px);
+        -o-transform:translate(-30px, -2px);
 }
 
 .text {
